--- a/base/1537344420r12iaqki4o/text.html
+++ b/base/1537344420r12iaqki4o/text.html
@@ -2,7 +2,7 @@
 <html><head><meta name="qrichtext" content="1" /><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><style type="text/css">
 p, li { white-space: pre-wrap; }
 </style></head><body style=" font-family:'DejaVu Sans'; font-size:11pt; font-weight:400; font-style:normal;">
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">По умолчанию Nginx разрешает имена из конфигов единожды в момент запуска. Это подходит для имён, которые не изменяются годами, но если вдруг имя стало разрешаться в другой адрес, то потребуется перезапуск Nginx.</p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">По умолчанию Nginx разрешает имена из конфигов единожды в момент запуска. Это подходит для имён, которые не изменяются месяцами/годами, но если вдруг имя стало разрешаться в другой адрес, то потребуется перезапуск Nginx.</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Но если имя сохранить в переменную и потом использовать эту переменную в конфиге, то резолв будет происходить каждый раз при выполнении команды, т.к. Nginx иначе обрабатывает переменные.</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
